# bioalign

./: .gitignore  AI_USAGE.md  README.md  proposal.md  pyproject.toml
adr/: 001-linear-gaps.md
bioalign/: __init__.py  align.py
bioalign/core/: dp.py  init.py  scoring.py  traceback.py  types.py
bioalign/io/: fasta.py
tests/unit/: test_fasta_parser.py  test_global_small.py  test_local_small.py  test_semiglobal_small.py
