[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioalign"
version = "0.0.1"
description = "Educational pairwise alignment toolkit (NW/SW) with clean API, tests, and docs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "N R"}]
dependencies = ["numpy>=1.26"]

# (v1+) expose CLI entrypoint here
#[project.scripts]
#bioalign = "bioalign.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.5",
  "pyright>=1.1",
  # optional: "typer>=0.12"
]

[tool.setuptools.packages.find]
include = ["bioalign*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-ra -q"
markers = ["slow: perf guard tests"]

[tool.coverage.run]
branch = true
source = ["bioalign/core"]

[tool.coverage.report]
fail_under = 90
show_missing = true
